Don't pretend like we support batches